# snake

./: CMakeLists.txt
src/: main.cpp  snake.cpp
